[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/plunger/plunger_plunged_5.png" type="Texture" id=1]
[ext_resource path="res://assets/plunger/plunger_1.png" type="Texture" id=2]
[ext_resource path="res://assets/plunger/plunger_2.png" type="Texture" id=3]
[ext_resource path="res://assets/plunger/plunger_0.png" type="Texture" id=4]
[ext_resource path="res://assets/plunger/plunger_3.png" type="Texture" id=5]
[ext_resource path="res://assets/plunger/plunger_5.png" type="Texture" id=6]
[ext_resource path="res://assets/plunger/plunger_4.png" type="Texture" id=7]
[ext_resource path="res://assets/plunger/plunger_plunged_4.png" type="Texture" id=8]
[ext_resource path="res://assets/plunger/plunger_plunged_2.png" type="Texture" id=9]
[ext_resource path="res://assets/plunger/plunger_plunged_1.png" type="Texture" id=10]
[ext_resource path="res://assets/plunger/plunger_plunged_0.png" type="Texture" id=11]
[ext_resource path="res://assets/plunger/plunger_plunged_3.png" type="Texture" id=12]
[ext_resource path="res://assets/plunger/plunge.wav" type="AudioStream" id=13]
[ext_resource path="res://levels/level_select/difficulty_plunger.gd" type="Script" id=14]
[ext_resource path="res://assets/m3x6.ttf" type="DynamicFontData" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 1 ) ],
"loop": false,
"name": "plunging",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 15 )

[node name="difficulty_plunger" type="Area2D"]
collision_mask = 3
script = ExtResource( 14 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="static_body_2d" type="StaticBody2D" parent="."]
collision_mask = 3

[node name="collision_shape_2d2" type="CollisionShape2D" parent="static_body_2d"]
position = Vector2( 0, 3 )
rotation = 3.14159
shape = SubResource( 2 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.5 )
rotation = 3.14159
shape = SubResource( 3 )

[node name="plunge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="plunge_reset_timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "nomral mode active"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_difficulty_plunger_body_entered"]
[connection signal="timeout" from="plunge_reset_timer" to="." method="_on_plunge_reset_timer_timeout"]
